# Library-Management-System

./: .gitignore  README.md  invalid_books.json  main.py  pyproject.toml  validated_books.json
.github/workflows/: ci_test.yml  main.yml
SQL/: README.md  data.sql  database_script.sql  queries.sql  schema.sql
api_spec/: swagger.yaml
data_ingestion/: README.md  book_records.json  books_processor.py  books_validate.py  data_processor.py  data_validation.py  insert_data.py  invalid_books.json  models.py  sample_data_of_book.json  schemas.py  validated_books.json
data_ingestion/book_api/: api_client.py  api_fetcher.py  database.py  dickens_books.json  models.py  schemas.py
data_ingestion/data/: author.csv  book.csv  library.csv  member.csv
django_api/: README.md
django_api/api_documentation/: Library Management System.postman_collection.json  swagger.json  swagger.yaml
django_api/lms_api/: .coverage  db.sqlite3  library_sqlite.db
django_api/lms_api/lms_api/: settings.py  urls.py
