[project]
name = "library-management-system"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "coverage>=7.10.4",
    "django>=5.2.4",
    "django-filter>=25.1",
    "djangorestframework>=3.16.0",
    "drf-yasg>=1.21.10",
    "factory-boy>=3.3.3",
    "mysqlclient>=2.2.7",
    "pydantic[email,emailetr,emailstr]>=2.11.7",
    "pymysql>=1.1.1",
    "pytest-django>=4.11.1",
    "python-decouple>=3.8",
    "requests>=2.32.4",
    "ruff>=0.12.5",
    "sqlalchemy>=2.0.42",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "ruff>=0.12.5",
]
